# ros_ws

./: .gitignore  .gitignore~  .~lock.output.csv#  :wq  =1.0.0  EXP2.pgm  EXP2.yaml  README.md  \  adding_world_nums.py  all_bag_plots.py  asymmetric_obs_placement.py  bag_plots.py  big_hallway.pgm  big_hallway.yaml  big_map_april_4.pgm  big_map_april_4.yaml  categorizing_paths.py  clean_script.py  config.yaml  corridor.sdf  corridor_creation_steps.py  csv_shape.py  curvature_triangle_viz.py  diff_output.txt  diff_sidebyside.txt  exp1.pgm  exp2_new.pgm  exp2_new.yaml  frames_2025-03-21_21.41.29.gv  frames_2025-03-22_14.06.28.gv  frames_2025-04-03_15.41.04.gv  frames_2025-09-11_12.26.06.gv  frames_2025-09-28_19.12.30.gv  gauss_3_mlp_asym  gaussian_dist_visual.py  hallway_1.pgm  hallway_1.yaml  hallway_exp_2.pgm  hallway_exp_2.yaml  (+59 more)
BARN_turtlebot/: adding_physics_plugin.py  world_sdf.py
august_16/: config_meta_data.yaml  metadata.yaml
august_16_pt2/: config_meta_data.yaml
august_18/: config_meta_data.yaml  metadata.yaml
august_18_gaus/: metadata.yaml
bags/: visual.py
bt/: plannerless_follow_path.xml
corr_steps_out/: metrics.txt
hallway_mid_obs_1/: metadata.yaml
hallway_mid_obs_2/: metadata.yaml
hallway_mid_obs_3/: metadata.yaml
hallway_mid_obs_4/: metadata.yaml
hallway_mid_obs_5/: metadata.yaml
hallway_mid_obs_6/: metadata.yaml
hallway_mid_obs_7/: metadata.yaml
hallway_mid_obs_8/: metadata.yaml
hallway_mid_obs_9/: metadata.yaml
hallway_narrow_1/: metadata.yaml
hallway_narrow_2/: metadata.yaml
hallway_narrow_3/: metadata.yaml
hallway_narrow_4/: metadata.yaml
hallway_narrow_5/: metadata.yaml
src/map_pkg/: CMakeLists.txt  package.xml  setup.py
src/map_pkg/launch/: .sample_world.launch.py.swo  bag_poc.launch.py  basic_world.launch.py  ignition.launch.py  sandbox.pgm  test_dependecies.launch.py  training.launch.py  turtlebot4_spawn.launch.py  undock.launch.py  validation_training.launch.py
src/map_pkg/my_robot_bringup/: Hallucination_prev_work.py  hallucinated_lidar.csv  lidar_subscriber.py  new_hall.py  random_motor.py  training_node.py
src/map_pkg/worlds/: .maze.sdf.swp  maze.sdf
src/middle_man/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
src/middle_man/src/: .local_goal.hpp.swp  .main.cpp.swp  .obs_validation.cpp.swp  .obstacles.cpp.swp  .obstacles.hpp.swp  .raytracing.cpp.swp  .raytracing.hpp.swp  \  adaptive_time.cpp  barn_time.cpp  local_goal.hpp  main.cpp  mpc.cpp  mpc.hpp  notes.txt  obs_validation.cpp  obstacles.cpp  obstacles.hpp  ray_main.cpp  raytracing.cpp  raytracing.hpp  runtime.cpp
src/model/: CMakeLists.txt  package.xml
src/model/src/: .onnx_model.cpp.swp  main.cpp  onnx_model.cpp  onnx_model.hpp
src/my_robot_bringup/: :w  CMakeLists.txt  package.xml  setup.py
src/my_robot_bringup/cmake/: turtlebot4_ignition_bringupConfig.cmake
src/my_robot_bringup/launch/: .bag_poc.launch.py.swp  .sample_world.launch.py.swp  .test_dependecies.launch.py.swp  .testing.launch.py.swp  .training.launch.py.swp  .undock.launch.py.swp  :wq  ;w  bag_poc.launch.py  barn_test.launch.py  dockless.launch.py  dockless_old.launch.py  dwa_baseline.launch.py  exp_validation.launch.py  hardware.launch.py  hardware_test.launch.py  map_name.pgm  map_name.yaml  one_shot_launch.launch.py  sample_world.launch.py  simple_bringup.launch.py  test_backup.launch.py  test_dependecies.launch.py  testing.launch.py  training.launch.py  turtlebot4_spawn.launch.py  undock.launch.py  validation_training.launch.py
src/my_robot_bringup/my_robot_bringup/: (self  .Hallucination.py.swp  .lidar_subscriber.py.swp  .map_train.py.swp  .multiple_old.py.swp  .multiple_seg.py.swp  .random_motor.py.swp  .test_hallucination.py.swp  .test_node.py.swp  .training_map_frame.py.swp  .undock_node.py.swp  .validation_training.py.swp  :w  Hallucination.py  Hallucination_prev_work.py  \  agro_gaussian.py  backup_multiple_seg.py  barn_nodock.py  barn_one_shot.py  create_training.py  experiment_validation_node.py  gaussian_random_walk.py  gentle_agro.py  hardware_test.py  lidar_bag.py  lidar_subscriber.py  lidar_test.py  local_goal.py  map_train.py  multiple_old.py  multiple_old_back.up  multiple_old_noisy_obs.py  multiple_seg.py  new_gaussian_random_walk.py  notes.txt  one_shot_trial.py  random_motor.py  random_walk.py  symm_with_noise.py  (+10 more)
src/my_robot_bringup/sensors/: rplidar.urdf.xacro
src/my_robot_bringup/worlds/: .maze.sdf.swp  empty_world.sdf  exp1.sdf  maze_april_backup.sdf  maze_copy.sdf  sandbox.sdf
src/one_shot_planner/: CMakeLists.txt  one_shot_planner.xml  package.xml
src/one_shot_planner/include/: one_shot_planner.hpp
src/one_shot_planner/src/: one_shot_planner.cpp
src/onnx/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  .onnx_controller.xml.swp  CMakeLists.txt  big_may.onnx  may9.onnx  model.onnx  onnx_controller.xml  package.xml  robot_model_adv.onnx
src/onnx/config/: .onnx_nav2_params.yaml.swp  onnx_nav2_params.yaml
src/onnx/include/onnx/: .onnx_controller.hpp.swp  onnx_controller.hpp
src/onnx/launch/: .test_onnx_nav2.launch.py.swp  test_onnx_nav2.launch.py
src/onnx/src/: .mpc.cpp.swp  .mpc.hpp.swp  .onnx_controller.cpp.swo  .onnx_controller.cpp.swp  2025_08_17_18_18_scaler_maxs.txt  2025_08_17_18_18_scaler_mins.txt  2025_08_17_19_40_scaler_maxs.txt  2025_08_17_19_40_scaler_mins.txt  2025_08_18_13_19_scaler_maxs.txt  2025_08_18_13_19_scaler_mins.txt  august17.onnx  august17_100.onnx  august18_100.onnx  carlos.onnx  cnn_controller.cpp  cnn_lstm_controller.cpp  combine_08_14.onnx  combine_08_14_scaler_max.txt  combine_08_14_scaler_mins.txt  combine_scaler_max.txt  combine_scaler_min.txt  combined_6_01.onnx  local_goal.hpp  mpc.cpp  mpc.hpp  obstacles.hpp  onnx_controller.cpp  scaler_max.txt  scaler_mins.txt  scaler_scale.txt
src/onnx/src/world5_failure/: metadata.yaml
src/onnx/src/world6_failure/: metadata.yaml
src/onnx/src/world7_failure/: metadata.yaml
src/publish_features/: CMakeLists.txt  package.xml
src/publish_features/src/: .approximate.cpp.swp  .main.cpp.swp  .notes.txt.swp  approximate.cpp  main.cpp  notes.txt
(+8694 files in other folders)
