<package format="2">
  <name>onnx</name>
  <version>0.1.0</version>
  <description>The onnx plugin for Nav2</description>

  <maintainer email="wyattcolburn@example.com">Wyatt Colburn</maintainer>

  <license>TODO: License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>libonnxruntime-dev</build_depend>
	
  <exec_depend>libonnxruntime</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
	<build_type>ament_cmake</build_type>
	<nav2_core plugin="${prefix}/onnx_controller.xml" />
  </export>
</package>

